customized jquerycollapse to use data-jqcollapse-summary and jqopen class to avoid conflict with the navigation menu of the theme which uses the "open" class and data-collapse-summary attribute for a different purpose

--- a/src/unep/static/downloads.css
+++ b/src/unep/static/downloads.css
@@ -34,7 +34,14 @@ text-decoration: none;
 #meeting-downloads tr {
   border-bottom: 1px solid #EEEEEE;
 }
-
+#meeting-downloads th span {
+background: rgb(190, 183, 183);
+padding: 5px 10px;
+right: -12px;
+top: -10px;
+position: relative;
+font-size: 67%;
+}
 #meeting-downloads th:first-child,
 #meeting-downloads td:first-child {
   width: 100%;
